--- a/public/views/test.html
+++ b/public/views/test.html
@@ -17,12 +17,12 @@
          <p id="intro"> 
          	FED's wants to give us one more way to ride the GRT. A mobile app for iOS and Android that will let us board GRT buses, much like our watcards do now, might be coming soon. Of course, using app will not tamper with personal data on your phone, and don't worry, watcards will still work just like they do now.</p>
 
-         	<p id="intro">Let us if you're interested, answer these questions below</p>
+         	<p id="intro">Let us know if you're interested, answer these questions below</p>
 
 <br/><br/><br/>
 <p class="question">1. Which phone do you have?</p>
 <div ng-init="init()">
-	<input type="search" id="textBox" ng-model="selectedItem " placeholder="Search...">
+	<input type="search" id="textBox" ng-model="question1 " placeholder="Search...">
 	<div class="HorizontalScroll">
 		<ul>
 			<li ng-repeat="phone in revisedText | filter:selectedItem track by $index">
@@ -37,8 +37,9 @@
 		</ul>
 	</div>
 </div>
-<p class="question">2. Which term are you in? <!--lighter color-->eg. 3A </p>
-<input id="textBox" type="text" ng-model="term" placeholder="">
+<p class="question">2. Which term are you in? </p>
+<input id="textBox" type="text" ng-model="question2" placeholder=" eg. 3A">
+<br/><br/>
 
 <div class="question">3. How often do you use the bus?</div>
 
@@ -46,22 +47,22 @@
 <div class="noScroll">
 	<ul>
 		<li class="noScroll" ng-repeat="option in sliderOptions">
-			<div ng-if="sliderOptions[calculateValue(sliderValue)] === option">
+			<div ng-if="sliderOptions[calculateValue(question3)] === option">
 				<div id="bold">{{option}}</div>
 			</div>
-			<div ng-if="sliderOptions[calculateValue(sliderValue)] !== option">{{option}}</div>
+			<div ng-if="sliderOptions[calculateValue(question3)] !== option">{{option}}</div>
 		</li>
 	</ul>
-	<slider id="restrictedWidth" floor="0" ceiling="3" step="0.01" precision="1" ng-model="sliderValue" translate="calculateValue"></slider>
+	<slider id="restrictedWidth" floor="0" ceiling="3" step="0.01" precision="1" ng-model="question3" translate="calculateValue"></slider>
 </div>
 
 <p class="question">4. Would you use a safe mobile app that lets you ride the GRT, like your watcard does now?</p>
-<input type="radio" ng-model="checkBox.yes" name="checkBox">yes<br/>
-<input type="radio" ng-model="checkBox.no" name="checkBox">no
+<input type="radio" ng-model="question4" name="checkBox">yes!<br/>
+<input type="radio" ng-model="question4" name="checkBox">no
 <div ng-show="checkBox.no"> <br/>
 	<input id="textBox" type="text" ng-model="explanation" placeholder="Please explain">
 </div>
 <br/>
-<input id="restrictedWidth" type="submit" value="Submit"> 
+<input id="restrictedWidth" type="submit" value="Submit" ng-click="submit()"> 
 </body>
 </html>
