--- a/public/views/test.html
+++ b/public/views/test.html
@@ -41,9 +41,7 @@
 <input id="textBox" type="text" ng-model="question2" placeholder=" eg. 3A">
 <br/><br/>
 
-<div class="question">3. How often do you use the bus?</div>
-
-<!--slider here-->
+<p class="question">3. How often do you use the bus?</p>
 <div class="noScroll">
 	<ul>
 		<li class="noScroll" ng-repeat="option in sliderOptions">
@@ -55,7 +53,6 @@
 	</ul>
 	<slider id="restrictedWidth" floor="0" ceiling="3" step="0.01" precision="1" ng-model="question3" translate="calculateValue"></slider>
 </div>
-
 <p class="question">4. Would you use a safe mobile app that lets you ride the GRT, like your watcard does now?</p>
 <input type="radio" ng-model="question4" name="checkBox">yes!<br/>
 <input type="radio" ng-model="question4" name="checkBox">no
